Fix layout on smaller desktop resolutions

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,27 @@
+:root {
+    --soft-orange: hsl(35, 77%, 62%);
+    --soft-red: hsl(5, 85%, 63%);
+
+    --off-white: hsl(36, 100%, 99%);
+    --grayish-blue: hsl(233, 8%, 79%);
+    --dark-grayish-blue: hsl(236, 13%, 42%);
+    --very-dark-blue: hsl(240, 100%, 5%);
+}
+
+
 body {
-    margin: 75px 150px;
     font-family: 'Inter', sans-serif;
-    background-color: hsl(36, 100%, 99%);
+    background-color: var(--off-white);
 }
 
 header {
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
+    max-width: 1120px;
+    margin: 50px auto 40px auto;
 }
+
 
 .logo {
     max-width: 100%;
@@ -23,17 +35,22 @@ header ul {
 nav li {
     display: inline-block;
     padding: 0px 15px;
-    color: hsl(236, 13%, 42%);
+    color: var(--dark-grayish-blue);
     font-size: 0.9rem;
+}
+
+nav li:hover {
+    color: var(--soft-red);
 }
 
 .main-container {
     display: grid;
-    width: 100%;
-    height: 50vh;
-    grid-template-columns: repeat(3, 1fr);
+    width: fit-content;
+    height: 75vh;
+    grid-template-columns: repeat(3, minmax(min-content, 350px));
     grid-template-rows: 1fr auto;
     grid-gap: 30px;
+    margin: 0 auto;
 }
 
 .main-image {
@@ -42,38 +59,42 @@ nav li {
 
 .main-image img {
     object-fit: cover;
-    max-width: 100%;
-    min-height: 100%;
+    width: min(100%, 750px);
+    height: 100%;
 }
 
 .new-articles {
     grid-column: 3/4;
     grid-row: 1/3;
-    background-color: hsl(240, 100%, 5%);
+    background-color: var(--very-dark-blue);
     padding: 20px;
     max-height: 100%;
     overflow: auto;
 }
 
 .new-articles h2 {
-    color: hsl(35, 77%, 62%);
+    color: var(--soft-orange);
     font-size: 2rem;
     margin:0;
 }
 
 .new-articles h3 {
-    color: hsl(36, 100%, 99%);
+    color: var(--off-white);
+}
+
+.new-articles h3:hover {
+    color: var(--soft-orange);
 }
 
 .new-articles p {
-    color: hsl(233, 8%, 79%);
+    color: var(--grayish-blue);
     font-size: 0.8rem;
     line-height: 1.6em;
 }    
 
 hr {
     border: 0;
-    border-top: 0.25px solid hsl(233, 4%, 60%);
+    border-top: 0.25px solid var(--grayish-blue);
     margin: 30px 0;
 }
 
@@ -84,7 +105,6 @@ hr {
     line-height: 2.9rem;
     padding-right: 40px;
 }
-
 
 .main-para p {
     font-size: 0.8rem;
@@ -105,7 +125,9 @@ hr {
     margin-top: 17px;
 }
 
-
+.main-para button:hover {
+    background-color:hsl(240, 100%, 5%);
+}
 
 .bottom-one img, .bottom-two img, .bottom-three img {
     width: 90px;
@@ -130,6 +152,11 @@ hr {
     margin: 5px 0px;
 }
 
+.bottom-one h5:hover, .bottom-two h5:hover, .bottom-three h5:hover {
+    color:hsl(5, 85%, 63%)
+}
+
+
 .bottom-one p, .bottom-two p, .bottom-three p {
     color:hsl(236, 13%, 42%);
     font-size: 0.8rem;
@@ -139,4 +166,3 @@ hr {
 .text-bottom-one, .text-bottom-two, .text-bottom-three {
     margin-left: 25px;
 }
-
